--- a/guestbook-web/src/main/resources/content/Language.properties
+++ b/guestbook-web/src/main/resources/content/Language.properties
@@ -1,2 +1,8 @@
 javax.portlet.title.com_liferay_docs_gueatbook_portlet_GuestbookWebPortlet=GuestbookWeb
 guestbookweb.caption=Hello from GuestbookWeb!
+#errore messages
+entry-added=Entry added successfully.
+entry-deleted= Entry deleted successfully.
+guestbook-added=Guestbook added successfully.
+guestbook-updated=Guestbook updated successfully.
+guestbook-deleted=Guestbook deleted successfully.
